Make it all black

--- a/home.html
+++ b/home.html
@@ -9,8 +9,8 @@
   </head>
   <body>
     <div class="root">
-      <div id="code-section"></div>
-      <div id="signature-section">
+      <div class="section" id="code-section"></div>
+      <div class="section" id="signature-section">
         <div id="signature-canvas"></div>
       </div>
     </div>
