--- a/home.html
+++ b/home.html
@@ -5,10 +5,10 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.2/p5.min.js"></script>
     <link rel="stylesheet" type="text/css" href="css/main.css">
-    <link rel="stylesheet" type="text/css" href="css/themes/atom-dark-syntax.css">
-    <link rel="stylesheet" type="text/css" href="css/themes/atom-light-syntax.css">
-    <link rel="stylesheet" type="text/css" href="css/themes/solarized-dark-syntax.css">
-    <link rel="stylesheet" type="text/css" href="css/themes/solarized-light-syntax.css">
+    <link rel="stylesheet" type="text/css" class="alternate atom-dark-syntax" href="css/themes/atom-dark-syntax.css">
+    <link rel="stylesheet" type="text/css" class="alternate atom-light-syntax" href="css/themes/atom-light-syntax.css">
+    <link rel="stylesheet" type="text/css" class="alternate solarized-dark-syntax" href="css/themes/solarized-dark-syntax.css">
+    <link rel="stylesheet" type="text/css" class="alternate solarized-light-syntax" href="css/themes/solarized-light-syntax.css">
   </head>
   <body>
     <div class="root">
@@ -21,7 +21,7 @@
           <div>
             <p>Themes</p>
             <select id="theme-selector">
-              <option value="atom-dark-syntax">Atom Dark Syntax</option>
+              <option value="atom-dark-syntax" selected="selected">Atom Dark Syntax</option>
               <option value="atom-light-syntax">Atom Light Syntax</option>
               <option value="solarized-dark-syntax">Solarized Dark Syntax</option>
               <option value="solarized-light-syntax">Solarized Light Syntax</option>
